# Comprehensive-Rust

./: Cargo.toml  README.md
day_one_afternoon/src/commands/: arrays.rs
day_one_morning/: Cargo.toml
day_one_morning/src/: lib.rs
day_one_morning/src/functions/: arithmetic.rs  blocks.rs  loops.rs  mod.rs  types.rs
exercise_collatz_sequence/: Cargo.toml
exercise_collatz_sequence/src/: main.rs
exercise_collatz_sequence/src/functions/: sequences.rs
exercise_nested_arrays/: Cargo.toml
exercise_nested_arrays/src/: lib.rs
exercise_nested_arrays/src/commands/: arrays.rs  mod.rs  patterns.rs  tuples.rs
src/: main.rs
