[package]
name = "comprehensive-rust"
version = "0.1.0"
edition = "2024"
authors = ["ACFHarbinger"]

[workspace]
# List the paths to the packages included in this workspace
members = [
    "exercise_collatz_sequence", "exercise_nested_arrays",
]

# Shared workspace settings
resolver = "2"

[[bin]]
name = "comprehensive-rust"
path = "src/main.rs"

[dependencies]
exercise_collatz_sequence = { path = "./exercise_collatz_sequence" }
exercise_nested_arrays = { path = "./exercise_nested_arrays" }
