[package]
name = "comprehensive-rust"
version = "0.1.0"
edition = "2024"
authors = ["ACFHarbinger"]

[workspace]
# List the paths to the packages included in this workspace
members = ["day_one_morning", "day_one_afternoon"]

# Shared workspace settings
resolver = "2"

[[bin]]
name = "comprehensive-rust"
path = "src/main.rs"

[dependencies]
day_one_morning = { path = "./day_one_morning" }
day_one_afternoon = { path = "./day_one_afternoon" }
